--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,12 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+  assets:
+    - assets/love_shot.jpg
+    - assets/growl.jpg
+    - assets/call_me_baby.jpg
+    - assets/tempo.jpg
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
