--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   html_unescape: ^2.0.0
   just_audio: ^0.9.32
   audio_session: ^0.1.6
+  shared_preferences: ^2.0.15
 
 
   # The following adds the Cupertino Icons font to your application.
